crates/solidity/testing/snapshots/bindings_output/expressions/revert_shadowing/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:2:35]
    │
  2 │ ╭─▶     function testBuiltIn() public pure {
    ┆ ┆   
 11 │ ├─▶     function customRevert(string memory) internal pure {}
    │ │                                                               
    │ ╰─────────────────────────────────────────────────────────────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (1):
- Def: #1 ["Test" @ input.sol:1:10] (contract)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (1):
- ???: ["testBuiltIn" @ input.sol:2:14]

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function testBuiltIn() public pure {
   │              ─────┬─────  
   │                   ╰─────── ???
───╯
